# FreeRTOS-blinky-rp2350

./: CMakeLists.txt  README.md
src/: main.c
